--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,35 @@
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #d8d5c7;;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --color-primary:  #d6723a;
+  --color-secondary:  #317c8b;
+  --color-terciary: #d8d5c7;
+  --color-background:#f5f2e6;
+  --color-background-primary: #ce58133f;
+  --color-background-secondary:  #317c8b3f;
+  --text-color: #333;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: Arial, sans-serif;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  overflow-x: hidden;
+}
+
+a, button {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+hr {
+  border: 1px solid var(--text-color);
+  margin: 1px 0;
+}
