--- a/src/styles/MyHeader.module.css
+++ b/src/styles/MyHeader.module.css
@@ -1,6 +1,6 @@
 .headerContainer {
   color: white;
-  background-color: #d8d5c7;
+  background-color: var(--color-terciary);
   margin: 0px;
   display: flex;
   justify-content: space-around;
@@ -9,10 +9,10 @@
   left: 0;
   width: 100%;
   height: 70px;
+  position: fixed;
 }
 
 .navContainer {
-  background-color: #d8d5c7;
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
@@ -30,7 +30,7 @@
 }
 
 .navContainer a {
-  color: #d6723a;
+  color: var(--color-primary);
   text-decoration: none;
   padding: 5px 10%;
   border-radius: 5px;
